--- a/src/main/g8/.gitignore
+++ b/src/main/g8/.gitignore
@@ -1,4 +1,3 @@
-
 # Created by https://www.gitignore.io/api/linux,osx,windows,java,scala,intellij,jetbrains,visualstudiocode,sbt,bloop,metals
 # Edit at https://www.gitignore.io/?templates=linux,osx,windows,java,scala,intellij,jetbrains,visualstudiocode,sbt,bloop,metals
 
@@ -84,7 +83,14 @@ fabric.properties
 # *.ipr
 
 # Sonarlint plugin
-.idea/sonarlint
+.idea/**/sonarlint/
+
+# SonarQube Plugin
+.idea/**/sonarIssues.xml
+
+# Markdown Navigator plugin
+.idea/**/markdown-navigator.xml
+.idea/**/markdown-navigator/
 
 ### Java ###
 # Compiled class file
@@ -163,6 +169,10 @@ hs_err_pid*
 
 # Sonarlint plugin
 
+# SonarQube Plugin
+
+# Markdown Navigator plugin
+
 ### Linux ###
 *~
 
@@ -224,6 +234,7 @@ project/plugins/project/
 .lib/
 
 ### Scala ###
+*.metals
 
 ### VisualStudioCode ###
 .vscode/*
@@ -249,7 +260,7 @@ ehthumbs_vista.db
 [Dd]esktop.ini
 
 # Recycle Bin used on file shares
-\$RECYCLE.BIN/
+$RECYCLE.BIN/
 
 # Windows Installer files
 *.cab
@@ -262,9 +273,3 @@ ehthumbs_vista.db
 *.lnk
 
 # End of https://www.gitignore.io/api/linux,osx,windows,java,scala,intellij,jetbrains,visualstudiocode,sbt,bloop,metals
-
-### Overrides ###
-.idea/
-*.iml
-/classes/
-
