Exclude .scalafix.conf from Giter8 processing

--- a/src/main/g8/default.properties
+++ b/src/main/g8/default.properties
@@ -2,3 +2,4 @@ name=scala-server-toolkit-seed
 organization=com.avast
 package=$organization$.sst.example
 scalaVersion=2.13.1
+verbatim=.scalafix.conf
