--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,12 @@
-# Created by https://www.gitignore.io/api/linux,osx,windows,java,scala,intellij,jetbrains,visualstudiocode,sbt,bloop,metals
-# Edit at https://www.gitignore.io/?templates=linux,osx,windows,java,scala,intellij,jetbrains,visualstudiocode,sbt,bloop,metals
+
+# Created by https://www.toptal.com/developers/gitignore/api/linux,osx,windows,java,scala,gradle,intellij,jetbrains,visualstudiocode,sbt,vim,bloop,metals
+# Edit at https://www.toptal.com/developers/gitignore?templates=linux,osx,windows,java,scala,gradle,intellij,jetbrains,visualstudiocode,sbt,vim,bloop,metals
 
 ### Bloop ###
 .bloop/
 
 ### Intellij ###
-# Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio and WebStorm
+# Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio, WebStorm and Rider
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
 
 # User-specific stuff
@@ -35,6 +36,9 @@
 # When using Gradle or Maven with auto-import, you should exclude module files,
 # since they will be recreated, and may cause churn.  Uncomment if using
 # auto-import.
+# .idea/artifacts
+# .idea/compiler.xml
+# .idea/jarRepositories.xml
 # .idea/modules.xml
 # .idea/*.iml
 # .idea/modules
@@ -83,14 +87,26 @@ fabric.properties
 # *.ipr
 
 # Sonarlint plugin
+# https://plugins.jetbrains.com/plugin/7973-sonarlint
 .idea/**/sonarlint/
 
 # SonarQube Plugin
+# https://plugins.jetbrains.com/plugin/7238-sonarqube-community-plugin
 .idea/**/sonarIssues.xml
 
 # Markdown Navigator plugin
+# https://plugins.jetbrains.com/plugin/7896-markdown-navigator-enhanced
 .idea/**/markdown-navigator.xml
+.idea/**/markdown-navigator-enh.xml
 .idea/**/markdown-navigator/
+
+# Cache file creation bug
+# See https://youtrack.jetbrains.com/issue/JBR-2257
+.idea/$CACHE_FILE$
+
+# CodeStream plugin
+# https://plugins.jetbrains.com/plugin/12206-codestream
+.idea/codestream.xml
 
 ### Java ###
 # Compiled class file
@@ -118,7 +134,7 @@ fabric.properties
 hs_err_pid*
 
 ### JetBrains ###
-# Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio and WebStorm
+# Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio, WebStorm and Rider
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
 
 # User-specific stuff
@@ -133,6 +149,9 @@ hs_err_pid*
 # When using Gradle or Maven with auto-import, you should exclude module files,
 # since they will be recreated, and may cause churn.  Uncomment if using
 # auto-import.
+# .idea/artifacts
+# .idea/compiler.xml
+# .idea/jarRepositories.xml
 # .idea/modules.xml
 # .idea/*.iml
 # .idea/modules
@@ -168,10 +187,19 @@ hs_err_pid*
 # *.ipr
 
 # Sonarlint plugin
+# https://plugins.jetbrains.com/plugin/7973-sonarlint
 
 # SonarQube Plugin
+# https://plugins.jetbrains.com/plugin/7238-sonarqube-community-plugin
 
 # Markdown Navigator plugin
+# https://plugins.jetbrains.com/plugin/7896-markdown-navigator-enhanced
+
+# Cache file creation bug
+# See https://youtrack.jetbrains.com/issue/JBR-2257
+
+# CodeStream plugin
+# https://plugins.jetbrains.com/plugin/12206-codestream
 
 ### Linux ###
 *~
@@ -190,6 +218,7 @@ hs_err_pid*
 
 ### Metals ###
 .metals/
+project/metals.sbt
 
 ### OSX ###
 # General
@@ -198,7 +227,7 @@ hs_err_pid*
 .LSOverride
 
 # Icon must end with two \r
-Icon
+Icon
 
 # Thumbnails
 ._*
@@ -234,17 +263,36 @@ project/plugins/project/
 .lib/
 
 ### Scala ###
-*.metals
+
+### Vim ###
+# Swap
+[._]*.s[a-v][a-z]
+!*.svg  # comment out if you don't need vector files
+[._]*.sw[a-p]
+[._]s[a-rt-v][a-z]
+[._]ss[a-gi-z]
+[._]sw[a-p]
+
+# Session
+Session.vim
+Sessionx.vim
+
+# Temporary
+.netrwhist
+# Auto-generated tag files
+tags
+# Persistent undo
+[._]*.un~
 
 ### VisualStudioCode ###
 .vscode/*
-!.vscode/settings.json
 !.vscode/tasks.json
 !.vscode/launch.json
-!.vscode/extensions.json
+*.code-workspace
 
 ### VisualStudioCode Patch ###
 # Ignore all local history of files
+.ionide
 
 ### Windows ###
 # Windows thumbnail cache files
@@ -259,6 +307,9 @@ ehthumbs_vista.db
 # Folder config file
 [Dd]esktop.ini
 
+# Recycle Bin used on file shares
+$RECYCLE.BIN/
+
 # Windows Installer files
 *.cab
 *.msi
@@ -269,4 +320,32 @@ ehthumbs_vista.db
 # Windows shortcuts
 *.lnk
 
-# End of https://www.gitignore.io/api/linux,osx,windows,java,scala,intellij,jetbrains,visualstudiocode,sbt,bloop,metals
+### Gradle ###
+.gradle
+build/
+
+# Ignore Gradle GUI config
+gradle-app.setting
+
+# Avoid ignoring Gradle wrapper jar file (.jar files are usually ignored)
+!gradle-wrapper.jar
+
+# Cache of project
+.gradletasknamecache
+
+# # Work around https://youtrack.jetbrains.com/issue/IDEA-116898
+# gradle/wrapper/gradle-wrapper.properties
+
+### Gradle Patch ###
+**/build/
+
+# End of https://www.toptal.com/developers/gitignore/api/linux,osx,windows,java,scala,gradle,intellij,jetbrains,visualstudiocode,sbt,vim,bloop,metals
+
+### Overrides ###
+.idea/
+*.iml
+/classes/
+.bsp
+.vscode
+**/metals.sbt
+
