--- a/src/main/g8/docker-compose.yml
+++ b/src/main/g8/docker-compose.yml
@@ -1,8 +1,11 @@
-postgres:
-  image: postgres:12
-  ports:
-    - '5432:5432'
-  environment:
-    - POSTGRES_USER=user
-    - POSTGRES_PASSWORD=pass
-    - POSTGRES_DB=database
+version: "3"
+
+services:
+  postgres:
+    image: postgres:12
+    ports:
+      - "5432:5432"
+    environment:
+      - POSTGRES_USER=user
+      - POSTGRES_PASSWORD=pass
+      - POSTGRES_DB=database
